# ramses-android

./: .gitignore  .gitlint  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: aar-release.yml  aar-test.yml  github-actions-demo.yml
android/: CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle  versions.gradle
android/RamsesJNI/: CMakeLists.txt
android/RamsesJNI/include/: DisplayEventListener.h  RamsesBundle.h  SceneStateListener.h
android/RamsesJNI/src/: JNIInterface.cpp  RamsesBundle.cpp
android/ramses-aar/: build.gradle
android/ramses-aar/src/main/java/com/bmwgroup/ramses/: Property.java  RamsesBundle.java  RamsesThread.java  RamsesView.java
android/ramses-aar/src/main/java/com/bmwgroup/ramses/ramsesview/: AssetViewModel.kt  AssetViewModelProviderFactory.kt  RamsesCallback.kt  RamsesView.kt
android/ramses-aar/src/main/res/values/: attrs.xml
android/tests/: .gitignore  build.gradle
android/tests/src/androidTest/: README.md
android/tests/src/androidTest/java/com/bmwgroup/ramses/: RamshTest.kt
android/tests/src/androidTest/java/com/bmwgroup/ramses/public_tests/: PropertyTest.kt  RamsesBundleTest.kt  RamsesThreadTest.kt
android/tests/src/main/: AndroidManifest.xml
android/tests/src/main/assets/: G05.rlogic
android/tests/src/main/java/com/bmwgroup/ramses/: MainActivity.java  TestActivity.java
android/tests/src/main/java/com/bmwgroup/ramsessample/activity/: MainActivity.java  VehicleSceneThread.java
android/tests/src/main/res/layout/: activity_main.xml
android/tests/src/main/res/values/: strings.xml  styles.xml
